src/pycodestyle/snapshots/ruff__pycodestyle__tests__E742_E742.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind:
    AmbiguousClassName: l
  location:
    row: 1
    column: 0
  end_location:
    row: 5
    column: 0
  fix: ~
- kind:
    AmbiguousClassName: I
  location:
    row: 5
    column: 0
  end_location:
    row: 9
    column: 0
  fix: ~
- kind:
    AmbiguousClassName: O
  location:
    row: 9
    column: 0
  end_location:
    row: 13
    column: 0
  fix: ~

