src/pycodestyle/snapshots/ruff__pycodestyle__tests__E743_E743.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind:
    AmbiguousFunctionName: l
  location:
    row: 1
    column: 0
  end_location:
    row: 5
    column: 0
  fix: ~
- kind:
    AmbiguousFunctionName: I
  location:
    row: 5
    column: 0
  end_location:
    row: 9
    column: 0
  fix: ~
- kind:
    AmbiguousFunctionName: O
  location:
    row: 10
    column: 4
  end_location:
    row: 14
    column: 0
  fix: ~

