src/pycodestyle/snapshots/ruff__pycodestyle__tests__E999_E999.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind:
    SyntaxError: unindent does not match any outer indentation level
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 0
  fix: ~
  parent: ~

