src/pycodestyle/snapshots/ruff__pycodestyle__tests__W292_W292_0.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind: NoNewLineAtEndOfFile
  location:
    row: 2
    column: 8
  end_location:
    row: 2
    column: 8
  fix:
    location:
      row: 2
      column: 8
    end_location:
      row: 2
      column: 8
    content: "\n"
    message: ~
  parent: ~

