src/pycodestyle/snapshots/ruff__pycodestyle__tests__W292_W292_4.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind: NoNewLineAtEndOfFile
  location:
    row: 1
    column: 2
  end_location:
    row: 1
    column: 2
  fix:
    content: "\n"
    location:
      row: 1
      column: 2
    end_location:
      row: 1
      column: 2

