src/pycodestyle/snapshots/ruff__pycodestyle__tests__W605_W605_1.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind:
    InvalidEscapeSequence: "."
  location:
    row: 2
    column: 9
  end_location:
    row: 2
    column: 11
  fix:
    content: "\\"
    location:
      row: 2
      column: 9
    end_location:
      row: 2
      column: 9
- kind:
    InvalidEscapeSequence: "."
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 2
  fix:
    content: "\\"
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 0
- kind:
    InvalidEscapeSequence: _
  location:
    row: 11
    column: 5
  end_location:
    row: 11
    column: 7
  fix:
    content: "\\"
    location:
      row: 11
      column: 5
    end_location:
      row: 11
      column: 5
- kind:
    InvalidEscapeSequence: _
  location:
    row: 18
    column: 5
  end_location:
    row: 18
    column: 7
  fix:
    content: "\\"
    location:
      row: 18
      column: 5
    end_location:
      row: 18
      column: 5

