src/pycodestyle/snapshots/ruff__pycodestyle__tests__constant_literals.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind: IsLiteral
  location:
    row: 4
    column: 3
  end_location:
    row: 4
    column: 17
  fix:
    location:
      row: 4
      column: 9
    end_location:
      row: 4
      column: 11
    content: "=="
    message: ~
  parent: ~
- kind: IsLiteral
  location:
    row: 6
    column: 3
  end_location:
    row: 6
    column: 16
  fix:
    location:
      row: 6
      column: 9
    end_location:
      row: 6
      column: 11
    content: "=="
    message: ~
  parent: ~
- kind: IsLiteral
  location:
    row: 8
    column: 3
  end_location:
    row: 8
    column: 16
  fix:
    location:
      row: 8
      column: 8
    end_location:
      row: 8
      column: 10
    content: "=="
    message: ~
  parent: ~
- kind: IsLiteral
  location:
    row: 10
    column: 3
  end_location:
    row: 10
    column: 17
  fix:
    location:
      row: 10
      column: 9
    end_location:
      row: 10
      column: 11
    content: "=="
    message: ~
  parent: ~
- kind: IsLiteral
  location:
    row: 12
    column: 3
  end_location:
    row: 12
    column: 17
  fix:
    location:
      row: 12
      column: 9
    end_location:
      row: 12
      column: 11
    content: "=="
    message: ~
  parent: ~
- kind:
    TrueFalseComparison:
      - false
      - Eq
  location:
    row: 14
    column: 3
  end_location:
    row: 14
    column: 8
  fix:
    location:
      row: 14
      column: 3
    end_location:
      row: 14
      column: 16
    content: False is None
    message: ~
  parent: ~
- kind:
    NoneComparison: Eq
  location:
    row: 14
    column: 12
  end_location:
    row: 14
    column: 16
  fix:
    location:
      row: 14
      column: 3
    end_location:
      row: 14
      column: 16
    content: False is None
    message: ~
  parent: ~
- kind:
    NoneComparison: Eq
  location:
    row: 16
    column: 3
  end_location:
    row: 16
    column: 7
  fix:
    location:
      row: 16
      column: 3
    end_location:
      row: 16
      column: 16
    content: None is False
    message: ~
  parent: ~
- kind:
    TrueFalseComparison:
      - false
      - Eq
  location:
    row: 16
    column: 11
  end_location:
    row: 16
    column: 16
  fix:
    location:
      row: 16
      column: 3
    end_location:
      row: 16
      column: 16
    content: None is False
    message: ~
  parent: ~
- kind:
    NoneComparison: Eq
  location:
    row: 22
    column: 12
  end_location:
    row: 22
    column: 16
  fix: ~
  parent: ~
- kind:
    NoneComparison: Eq
  location:
    row: 24
    column: 3
  end_location:
    row: 24
    column: 7
  fix: ~
  parent: ~
- kind:
    TrueFalseComparison:
      - false
      - Eq
  location:
    row: 26
    column: 12
  end_location:
    row: 26
    column: 17
  fix: ~
  parent: ~
- kind:
    TrueFalseComparison:
      - false
      - Eq
  location:
    row: 28
    column: 3
  end_location:
    row: 28
    column: 8
  fix: ~
  parent: ~

